--- a/src/components/Home/components/StaticPannel/StaticPannel.css
+++ b/src/components/Home/components/StaticPannel/StaticPannel.css
@@ -28,7 +28,6 @@
 }
 
 .static-pannel-topic {
-  font-family: "Ubuntu";
   margin-right: 15px;
   padding: 3px;
   display: flex;
@@ -37,7 +36,7 @@
 
 .static-pannel-title {
   font-size: 16px;
-  margin-bottom: 2px;
+  margin-bottom: 6px;
 }
 
 .static-pannel-subtitle {
@@ -49,7 +48,8 @@
   font-size: 24px;
   font-weight: 300;
   color: #3e3e3e;
-  margin-top: 18px;
+  height: 36px;
+  margin-top: 23px;
   animation: fadein 0.4s ease-in-out;
 }
 
@@ -65,12 +65,12 @@
 
 .static-pannel-update {
   height: 36px;
+  margin-top: 18px;
   display: flex;
   flex-direction: flex-end;
 }
 
 .total-budget-update {
-  margin-top: 10px;
   display: flex;
   justify-content: center;
 }
@@ -101,7 +101,7 @@
 }
 
 .static-pannel-text {
-  margin-top: 12px;
+  margin-top: 5px;
   display: flex;
   justify-content: center;
   animation: fadein 0.4s ease-in-out;
@@ -115,4 +115,154 @@
 
 .static-pannel-text button {
   margin-top: 3px;
+}
+
+@media screen and (max-width: 1512px) {
+  .static-pannel-wrapper {
+    min-width: 900px;
+  }
+}
+
+@media screen and (max-width: 1047px) {
+  .static-pannel-wrapper {
+    min-width: 600px;
+    max-width: 600px;
+  }
+
+  .static-pannel-amount, .static-pannel-text span {
+    font-size: 18px;
+  }
+
+  .static-pannel-text button {
+    margin-top: 0;
+  }
+
+  .static-pannel-text button img {
+    margin: 0 5px 2px 5px;
+  }
+}
+
+@media screen and (min-width: 700px) and (max-width: 1047px) {
+  .static-pannel {
+    padding: 3% 1.5%;
+  }
+
+  .static-pannel-section-wrapper {
+    padding: 0;
+    margin: 0 15px;
+  }
+
+  .static-pannel-input {
+    font-size: 18px;
+    width: 60px;
+    font-weight: 500;
+  }
+}
+
+@media screen and (max-width: 769px) {
+  .static-pannel-wrapper {
+    min-width: 512px;
+    margin: 10px;
+  }
+  
+  .static-pannel {
+    border-radius: 20px;
+    padding: 10px 0 0 0;
+  }
+
+  .static-pannel-section-wrapper {
+    width: 33%;
+    margin: 10px 0;
+    padding: 0 1%;
+  }
+
+  .static-pannel-section {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 25%;
+    margin: 5px 0;
+  }
+
+  .static-pannel-topic {
+    margin-right: 0;
+    padding: 3px 0;
+  }
+
+  .static-pannel-title {
+    font-size: 14px;
+  }
+
+  .static-pannel-amount {
+    margin-top: 24px;
+  }
+
+  .static-pannel-text span {
+    margin-top: 2px;
+  }
+
+  .static-pannel-text button {
+    margin-top: 0px;
+  }
+
+  .static-pannel-input {
+    width: 72px;
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .static-pannel-wrapper {
+    min-width: 280px;
+  }
+}
+
+@media screen and (max-width: 510px) {
+  .static-pannel {
+    flex-direction: column;
+    align-items: center;
+    padding: 18px 0;
+  }
+
+  .static-pannel-section-wrapper {
+    width: 80%;
+    margin: 5px 0;
+  }
+
+  .static-pannel-section {
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    padding-left: 0;
+    margin: 2px;
+  }
+
+  .static-pannel-title {
+    letter-spacing: 2px;
+    font-size: 13px;
+  }
+
+  .static-pannel-input {
+    height: 27px;
+  }
+
+  .static-pannel-update {
+    height: 27px;
+  }
+
+  .static-pannel-amount {
+    height: 27px;
+    margin-right: 7px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .static-pannel-wrapper {
+    margin: 10px 0 0 0;
+  }
+}
+
+@media screen and (max-width: 358px) {
+  .static-pannel-wrapper {
+    min-width: 267px;
+  }
 }
