--- a/src/components/Home/components/Accounts/List/List.css
+++ b/src/components/Home/components/Accounts/List/List.css
@@ -65,18 +65,18 @@
 
 .item-control-btn-group {
 	margin-left: 6px;
+	height: 50px;
 	display: flex;
 }
 
 .item-control-btn-wrapper {
-	margin-left: 10px;
-	padding: 15px 0;
-	display: flex;
+	margin: 15px 0 6px 6px;
 }
 
 .list-item-control-btn {
   border-radius: 16px;
-  padding: 5px 6px;
+  height: 25px;
+  width: 25px;
   display: flex;
   transition: 0s;
 }
@@ -91,6 +91,8 @@
 
 .confirm-btn-img {
 	width: 13px;
+	height: 11px;
+	margin: 7px 6px;
 }
 
 .list-item-group {
@@ -117,3 +119,61 @@
 	color: rgba(113, 113, 113, 1);
 	margin-left: 20px;
 }
+
+@media screen and (min-width: 1261px) and (max-width: 1512px) {
+  .item-control-btn-wrapper {
+    margin-left: 2px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .list-item-group span {
+    font-size: 13px;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .accounts-list-item {
+    margin-bottom: 8px;
+  }
+
+  .list-item-category {
+    margin-left: 8px;
+  }
+
+  .list-item-detail {
+    margin-left: 15px;
+  } 
+
+  .list-item-update {
+    flex-direction: column;
+  }
+
+  .list-item-update input {
+    margin: 4px;
+  }
+
+  .item-detail-update-input {
+    width: 90%;
+  }
+
+  .item-amount-update-input {
+    width: 90%;
+  }
+
+  .item-control-btn-group {
+    margin-top: 16%;
+  }
+
+  .item-control-btn-wrapper {
+    margin-left: 20%;
+  }
+}
+
+@media screen and (max-width: 358px) {
+  .list-item-detail {
+    margin-left: 10px;
+    width: 45%;
+  }
+}
+
