--- a/src/components/Home/components/Charts/Charts.css
+++ b/src/components/Home/components/Charts/Charts.css
@@ -16,7 +16,6 @@
 .charts-summary span {
   font-weight: 400;
   color: #3E3E3E;
-  font-family: "Ubuntu";
   letter-spacing: 0.5px;
   margin: 0 5px;
 }
@@ -49,5 +48,35 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media screen and (max-width: 680px) {
+  .charts-summary span {
+    font-size: 13px;
+    letter-spacing: 1px;
+  }
+  .chart-legend {
+    padding: 0;
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .chart-legend {
+    width: 50%;
+    padding-right: 20px;
+    margin: 5px 0 25px 0;
+  }
+}
+
+@media screen and (max-width: 510px) {
+  .charts {
+    flex-direction: column;
+  }
+
+  .chart-legend {
+    width: 75%;
+    margin: 5px 0 25px 0;
+  }
 }
 
