--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -19,11 +19,13 @@
 .register {
   background-color: rgba(82, 154, 237,1);
   padding-top: 7%;
+  height: 100%;
 }
 
 .signin {
   background-color: rgba(82, 154, 237,1);
   padding-top: 7%;
+  height: 100%;
 }
 
 .landing-welcome-words-wrapper {
@@ -61,7 +63,7 @@
 .landing-form {
   padding: 28px;
   max-width: 400px;
-  height: 100%;
+  height: auto;
   border-radius: 22px;
   border: 0;
   background-color: rgba(255, 255, 255, 0.98);
@@ -80,7 +82,7 @@
   font-weight: 500;
   letter-spacing: 1.2px;
   color: rgba(70,70,70 ,1);
-  margin: 25px 0 7px 7px;
+  margin: 10px 0 7px 7px;
   display: block;
 }
 
@@ -97,7 +99,7 @@
 
 .landing-form-submit {
   width: 100%;
-  margin: 46px 0 10px 0;
+  margin: 30px 0 10px 0;
   text-align: right;
   display: flex;
   justify-content: flex-end;
@@ -146,3 +148,121 @@
   color: rgba(73, 199, 170,1);
   margin: 0 5px;
 }
+
+@media screen and (max-width: 1025px) {
+  .switcher-nav {
+    margin: 30px;
+  }
+
+  .signin, .register {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .landing-welcome-words-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+    margin-top: 50px;
+  }
+
+  .landing-welcome-words {
+    width: 80%;
+    max-width: 500px;
+    margin: 0;
+  }
+
+  .landing-welcome-words p {
+    line-height: 50px;
+    margin: 0;
+  }
+
+  .landing-form-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 8%;
+    padding: 0;
+  }
+
+  .landing-form {
+    width: 80%;
+    min-width: 400px;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  .switcher-nav {
+    margin: 20px;
+  }
+
+  .switcher-nav p {
+    font-size: 15px;
+    margin: 2px 10px 0 10px;
+  }
+
+  .signin, .register {
+    margin-top: 20px;
+  }
+
+  .landing-welcome-words p {
+    font-size: 28px;
+    line-height: 36px;
+    letter-spacing: 0.5px;
+    margin: 0;
+  }
+
+  .tripper-white-logo {
+    width: 90px;
+  }
+
+  .landing-form-wrapper {
+    padding-bottom: 40px;
+  }
+
+  .landing-form {
+    width: 65%;
+    min-width: 280px;
+  }
+
+  .landing-form-row-title {
+    margin: 15px 0 7px 0;
+  }
+
+  .landing-form-submit {
+    margin-top: 30px;
+  }
+
+  .landing-form-alarm-words {
+    font-size: 13px;
+    letter-spacing: 0.6px;
+    margin: 5px;
+  }
+}
+
+@media screen and (max-width: 321px) {
+  .landing-form {
+    padding: 26px 16px;
+    min-width: 250px;
+    border-radius: 18px;
+  }
+
+  .landing-form-row-title {
+    font-size: 15px;
+    margin-top: 10px;
+  }
+
+  .landing-form-alarm {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .web-vital-info {
+    margin: 16px 10px 10px 10px;
+    line-height: 16px;
+    letter-spacing: 0;
+  }
+}
+
