--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,5 +1,4 @@
 .navigation {
-  font-family: 'Roboto';
   font-weight: 600;
   letter-spacing: 0.5px;
   padding: 10px 18px;
@@ -9,8 +8,6 @@
 }
 
 .navigation button {
-  font-size: 15px;
-  font-family: 'Roboto';
   font-weight: 600;
   color: rgba(62, 62, 62, 1);
   background-color: #FFF;
@@ -64,4 +61,34 @@
   width: auto;
   height: 15px;
   margin: 0 10px;
+}
+
+@media screen and (min-width: 679px) and (max-width: 1047px) {
+  .nav-text-wrapper {
+    margin: 8px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 699px) {
+  .navigation button, .nav-text-slogan, .nav-user-name {
+    font-size: 12px;
+  }
+
+  .nav-text-logo {
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .nav-text-logo {
+    margin: 0;
+  }
+
+  .nav-text-slogan, .nav-user-name,
+  .seperate-line-img {
+    display: none;
+  }
 }
